--- a/public/css/aisya/pis.css
+++ b/public/css/aisya/pis.css
@@ -6,6 +6,10 @@
     color: #fff !important;
 }
 
+.form-group {
+    margin-bottom: 15px;
+}
+
 .alert-success {
     border-color: #008d4c;
 }
@@ -34,18 +38,6 @@
 
 .alert-danger, .alert-error {
     border-color: #d73925;
-}
-
-.btn-primary {
-    background-color: #3c8dbc;
-    border-color: #367fa9;
-	color: #fff;
-}
-
-.btn-default {
-    background-color: #f4f4f4;
-    color: #444;
-    border-color: #ddd;
 }
 
 .btn {
