--- a/public/css/aisya/pis.css
+++ b/public/css/aisya/pis.css
@@ -63,6 +63,14 @@
     background-image: none;
 }
 
+.panel-body {
+    padding: 10px;
+}
+
+.panel {
+    margin-bottom: 10px;
+}
+
 button, input, select, textarea {
     font-family: inherit;
 }
