dev-1.1.0 : display andon

--- a/public/css/aisya/andon.css
+++ b/public/css/aisya/andon.css
@@ -72,3 +72,11 @@
 	font-weight: bold;
 	font-size: 20px ;
 }
+.status-off{
+	background-color: #ffffff ;
+	text-align: center;
+	color: black;
+	width: 100%;
+	font-weight: bold;
+	font-size: 20px ;
+}
