dev-1.0.0 : strainer menu, strainer scan 50%

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6718,3 +6718,12 @@ button.close {
         display: none!important
     }
 }
+
+.strainer-blue {
+    background-color: blue !important;
+    color: white;
+}
+
+.strainer-yellow {
+    background-color: yellow !important;
+}
