dev-1.0.0 : color white

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6734,8 +6734,10 @@ button.close {
 
 .strainer-green {
     background-color: green !important;
+    color: white;
 }
 
 .strainer-grey {
     background-color: #747574 !important;
+    color: white;
 }
