dev-1.0.0 : ng mode

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6741,3 +6741,20 @@ button.close {
     background-color: #747574 !important;
     color: white;
 }
+
+/**
+ * Custom CSS
+ */
+
+.bg-merah {
+    background-color: #dc3545;
+}
+
+.ng-header {
+    margin-top: 2rem;
+    padding: 0.5rem;
+}
+
+.text-white {
+    color: white;
+}
